--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
+
+<head> 
+    <title> The Beginning</title>
 </head>
-<body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<header> Header of Website Assignment 1 </header>
 
-</body>
+
+<p> This is the start of my paragraph </p>
 </html>
+
