--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 
 <header> Header of Website Assignment 1 </header>
+<ol> List of things
+<li>Item one</li>
+<li>Item two</li>
+
+</ol>
+
 
 
 <p> This is the start of my paragraph </p>
