--- a/index.html
+++ b/index.html
@@ -17,5 +17,16 @@
 
 <img src="" alt="">
 <p> This is the start of my paragraph </p>
+
+
+
+
+<nav>
+<a href="index.html">Home</a>
+
+
+</nav>
+
+
 </html>
 
