--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 </head>
 
 <header> Header of Website Assignment 1 </header>
+
+
+
+<body>
+    
 <ol> List of things
 <li>Item one</li>
 <li>Item two</li>
@@ -23,10 +28,10 @@
 
 <nav>
 <a href="index.html">Home</a>
-
+<a href=""></a>
 
 </nav>
 
-
+</body>
 </html>
 
