Update for assignment 1

--- a/index.html
+++ b/index.html
@@ -4,24 +4,33 @@
 <head> 
     <title> The Beginning</title>
 </head>
-
-<header> Header of Website Assignment 1 </header>
-
-
+<hr>
+<header> Corbin's Website </header>
+<div class="dropdown">
+    <button class="dropbtn">Assignments</button>
+    <div class="dropdown-content">
+      <a href="#">Apples</a>
+      <a href="#">Bananas</a>
+      <a href="#">Oranges</a>
+    </div>
+  </div>
+<hr>
 
 <body>
-    
+    <p> This is the start of my paragraph<br>
+        This is where it continues
+        </p>
+    <hr>
 <ol> List of things
 <li>Item one</li>
 <li>Item two</li>
 
 </ol>
+<hr>    
 
-
-<a href="https://www.bushnell.edu/"></a>
+<a href="https://www.bushnell.edu/">Bushnell</a>
 
 <img src="" alt="">
-<p> This is the start of my paragraph </p>
 
 
 
@@ -31,6 +40,9 @@
 <a href=""></a>
 
 </nav>
+
+
+<hr>
 
 </body>
 </html>
