--- a/index.html
+++ b/index.html
@@ -2,21 +2,17 @@
 <html>
 
 <head> 
-    <title> The Beginning</title>
+    <title> Zander and Carter Detailing</title>
 </head>
-<hr>
-<header> Corbin's Website </header>
-<div class="dropdown">
-    <button class="dropbtn">Assignments</button>
-    <div class="dropdown-content">
-      <a href="#">Apples</a>
-      <a href="#">Bananas</a>
-      <a href="#">Oranges</a>
-    </div>
-  </div>
-<hr>
+
 
 <body>
+   
+   
+    <hr>
+<h1> Zander and Carter Detailing </h1>
+
+<hr>
     <p> This is the start of my paragraph<br>
         This is where it continues
         </p>
@@ -25,24 +21,43 @@
 <li>Item one</li>
 <li>Item two</li>
 
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href=""></a>
+    
+    </nav>
+    
+
+
 </ol>
 <hr>    
 
-<a href="https://www.bushnell.edu/">Bushnell</a>
+<a href="https://www.bushnell.edu/" target="_blank">Bushnell</a>
 
-<img src="" alt="">
+<br>
+
+<img src="images/download.jpg" alt="Detailing example">
+
+<br>
+
+<label for="assignments"></label>
+<select id="assignments" onchange="location = this.value;">
+<option value="#">Assignments</option>
+<option value="assignment_1.html">Assignment 1</option>
+<option value="assignment2.html">Assignment 2</option>
+</select>
+
+<table>
 
 
+</table>
 
-
-<nav>
-<a href="index.html">Home</a>
-<a href=""></a>
-
-</nav>
 
 
 <hr>
+<footer>Copyright goes here </footer>
+
 
 </body>
 </html>
