--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head> 
     <title> Zander and Carter Detailing</title>
 </head>
+<br>
 
 
 <body>
@@ -11,19 +12,38 @@
    
     <hr>
 <h1> Zander and Carter Detailing </h1>
-
+<br>
 <hr>
-    <p> This is the start of my paragraph<br>
-        This is where it continues
+    <p> Different Wash types
+        hr
+        <br>
+    Orange
+Red
+Green
         </p>
     <hr>
-<ol> List of things
-<li>Item one</li>
-<li>Item two</li>
+<ol> Information Found on This Site
+<li>Special Deals!</li>
+<li>Services Offered
+<li>Book Appointment</li>
+</li>
 
 
+
+
+<label for="assignments"></label>
+<select id="assignments" onchange="location = this.value;">
+<option value="#">Assignments</option>
+<option value="assignment_1.html">Assignment 1</option>
+<option value="assignment2.html">Assignment 2</option>
+</select>
+
+
+<br>
+<hr>
 <nav>
-    <a href="index.html">Home</a>
+<a href="index.html"
+>Home</a>
     <a href=""></a>
     
     </nav>
@@ -33,7 +53,7 @@
 </ol>
 <hr>    
 
-<a href="https://www.bushnell.edu/" target="_blank">Bushnell</a>
+<a href="https://booksy.com/pro/en-us/onboarding/Login?gclid=Cj0KCQjwgL-3BhDnARIsAL6KZ6_xyfm_gStd_PzL-OabjPGab80T3FdVVBtl_YGVXf8-uAK0_6rH9oQaAp07EALw_wcB&_branch_match_id=1366642501927829374&utm_source=Google%20Ads&utm_campaign=%5BUS_B2B%5D%20BR%20Generic%20B2B%2FB2C%2019.01.2023&utm_medium=marketing&_branch_referrer=H4sIAAAAAAAAAwXB2wqCMAAA0L%2FpzRwIZoHEvGSikFrY5WU4N2%2FpJttq2UPf3jmdUrPcmSYZ15jzp1zWNZ9M9g7YUlyjOMT7th574voDSPx80G1qWF4XMFjEEqZ28rDRZ2km1J4VQdk3NU4VHrKowg64WAdSlp4a0T0qb41jvGACkC2OW55XcAabEKYa6dpb%2FQRtqBA9axEWXEsqXL8TfKJ%2FSRhXwp4AAAA%3D" target="_blank">Book Appointment</a>
 
 <br>
 
@@ -41,15 +61,15 @@
 
 <br>
 
-<label for="assignments"></label>
-<select id="assignments" onchange="location = this.value;">
-<option value="#">Assignments</option>
-<option value="assignment_1.html">Assignment 1</option>
-<option value="assignment2.html">Assignment 2</option>
-</select>
 
-<table>
 
+<table style="width:100%"></tablestyle>>
+    <tr>
+        <td>Wash</td>
+        <td>Detail</td>
+        <td>Protective Lining</td>
+      </tr>
+    
 
 </table>
 
