Update that I never committed to main
I never committed this to main.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head> 
-    <title> Zander and Carter Detailing</title>
+    <title> Between the Seams Detailing</title>
 </head>
 <img src="Detailing Logo.jpg" alt="Detailing Logo" width="428" height="250">
 
-<h1> Zander and Carter Detailing </h1>
+<h1> Between the Seams Detailing </h1>
 
 <link rel="stylesheet" href="style.css"> 
 
